elastic/hardening/cnp-audit-only-default-elastic-ports.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-audit-only-default-elastic-ports
  namespace: default
spec:
  description: "To block all ports except 9200 and 9300 in elastic pod"
  endpointSelector:
    matchLabels:
      app: elasticsearch
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9200"     #change port values to match your ports
        - ports:
            - port: "9300"
